--- a/custom_components/tauron_amiplus/manifest.json
+++ b/custom_components/tauron_amiplus/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "tauron_amiplus",
   "name": "Tauron AMIplus",
-  "codeowners": ["@PiotrMachowski"],
+  "codeowners": ["@Hajsiu"],
   "config_flow": true,
   "dependencies": ["recorder"],
-  "documentation": "https://github.com/PiotrMachowski/Home-Assistant-custom-components-Tauron-AMIplus",
+  "documentation": "https://github.com/Hajsiu/Home-Assistant-custom-components-Tauron-AMIplus-new",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/PiotrMachowski/Home-Assistant-custom-components-Tauron-AMIplus/issues",
+  "issue_tracker": "https://https://github.com/Hajsiu/Home-Assistant-custom-components-Tauron-AMIplus-new/issues",
   "requirements": ["requests"],
   "version": "v0.0.0"
 }
