--- a/custom_components/tauron_amiplus_haj/services.yaml
+++ b/custom_components/tauron_amiplus_haj/services.yaml
@@ -9,7 +9,7 @@ download_statistics:
       selector:
         device:
           filter:
-            - integration: tauron_amiplus
+            - integration: tauron_amiplus_haj
     start_date:
       name: Start date
       description: Start date of statistics to download.
